album 페이지 수정 완료
